--- a/github_repo_scrapper/.env.example
+++ b/github_repo_scrapper/.env.example
@@ -1,1 +1,4 @@
-GITHUB_TOKEN="Insert github PAT token with public repo access read only"
+# GitHub API Token
+# Get yours from: https://github.com/settings/tokens
+# Required scope: repo (to access PR data)
+GITHUB_TOKEN=ghp_your_token_here
